# WhaleTamer

./: .dockerignore  .gitignore  Dockerfile  TODO.md  docker-compose.yaml
backend/: .env  Dockerfile  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml
backend/app/: main.py
backend/app/core/: base_model.py  database.py  exeptions.py  settings.py
backend/app/modules/auth/: __init__.py  dependencies.py  integration_models.py  models.py  oauth_models.py  router.py  schemas.py
backend/app/modules/auth/services/: __init__.py  cli_tokens.py  email_auth.py  github_oauth.py
backend/app/modules/collector/: schemas.py
backend/app/modules/generate/: models.py  router.py  schemas.py  service.py
backend/app/modules/reports/: router.py  schemas.py  service.py
backend/app/modules/telegram/: schemas.py
backend/migrations/: env.py
backend/migrations/versions/: 0b1c2d3e4f50_add_reports_table.py  25aff6da08d0_add_integrationtoken.py  410bf45799a0_fix_metadata.py  8a60efd9b76c_.py  drop_integration_tokens.py  e3f4a5b6c7d8_add_collector_and_generate_tables.py  f4a6b7c8d9e0_add_oauth_and_fix_tokens.py
cli/: Dockerfile  README.md  docker-compose.yaml  go.mod  main.go
cli/cmd/: generate.go  (+2 more)
data-collector/: Dockerfile  README.md  docker-compose.example.yaml  go.mod  main.go
frontend/: .pnp.cjs  eslint.config.mjs  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.mts  vite.config.ts
telegram-bot/: Dockerfile  README.md  docker-compose.example.yaml  go.mod  main.go
wt-backend/: .dockerignore  docker-compose-dev.yaml  pyproject.toml
(+56 files in other folders)
